# whitebook

./: .gitignore  Akasha_in_a_bottle.tex  Alasha_in_a_bottle.py  Atomic_structure.tex  Badmotherfucker.tex  Chimera_Pedagogy.tex  Clays_submission.py  Clear-prana-pedagogi.py  Expose_Ledger_Regularity_NSE.tex  Fields_Millennium_Falcon_README.md  Makefile  NavierStokes_Ledger_Proof_Setup.md  ONU-UFP. tex  ONU_MA'AT_CALCULUS_WHITEBOOK.tex  Octanodal-Emo.tex  Onu-Syn-field-guide.Tex  Onu-mobius-squeeze.tex  Onu_Bloom_Illuminated_Field_Poem_v2.3.html  Onu_Ma-at_Synth.tex  Onu_Ma-at_pedagogy.tex  Onu_Pedagogi-of-everything.tex  Onu_UFP_1.TEX  Onu_UFP_2.tex  Onu_hawking_squeeze_triad.tex  Onu_parser.py  Onu_two_ways_proof.tex  Pedagogi_of_Pedagogis.py  Pedagogi_of_Pedagogis.tex  Pedagogy  Pedagogy2.tex  Pedagogy3.py  Pedagogy4.py  Pedagogy5.py  Pedagogy6.tex  Pedagogy_7.tex  Pedagogy_ai.py  Pedagogy_ai_py_in.tex  Phasal_Topology.tex  Pure_Atomic_Love.tex  Quasmos.tex  (+33 more)
